--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,17 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+JUDGE0_URL=https://judge0.codeknight.online/
+JUDGE0_API_KEY=
+
+BROADCAST_CONNECTION=pusher
+
+PUSHER_APP_ID=2075170
+PUSHER_APP_KEY=706b2cc3b30e1f41ade4
+PUSHER_APP_SECRET=fd89f890f75325db9c2a
+PUSHER_APP_CLUSTER=ap1
+PUSHER_SCHEME=https
+
 # GitHub OAuth
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
